<resources>
    <string name="address">Address</string>
    <string name="app_name">CRM mobile</string>
    <string name="arrow_down">&#9660;</string>
    <string name="arrow_up">&#9650;</string>
    <string name="attachment">Attachment</string>
    <string name="basePath">Base path of web service without sub-paths:</string>
    <string name="call">call</string>
    <string name="cancel">Cancel</string>
    <string name="category">Category</string>
    <string name="cid">Cid</string>
    <string name="city">City</string>
    <string name="company">Company</string>
    <string name="contactPersons">Contact Persons</string>
    <string name="contractDate">Contract date</string>
    <string name="contractId">Contract ID</string>
    <string name="country">Country</string>
    <string name="createdBy">Created by</string>
    <string name="dataSource">Web Service</string>
    <string name="dateFormat">MM/dd/yyyy</string>
    <string name="dateTimeFormat">MM//dd/yyyy hh:mm:ss</string>
    <string name="details">Details</string>
    <string name="email">Email</string>
    <string name="entryDate">Entry date</string>
    <string name="female">Female</string>
    <string name="filter">Filter</string>
    <string name="forename">Forename</string>
    <string name="gender">Gender</string>
    <string name="id">Id</string>
    <string name="list">List</string>
    <string name="loadCpFailed">contact persons couldn\'t be loaded</string>
    <string name="mainContact">Main contact</string>
    <string name="male">Male</string>
    <string name="masterData">Master data</string>
    <string name="memo">Note</string>
    <string name="mock">Mock</string>
    <string name="newCustomer">New customer</string>
    <string name="noAppAvailable">No application available to view file</string>
    <string name="noConnection">Data could not be send. Please check connection to web service.</string>
    <string name="noEmailClient">No email client installed</string>
    <string name="noId">Id couldn\'t be found.</string>
    <string name="noMasterData">Master data couldn\'t be loaded.</string>
    <string name="noNotes">Notes couldn\'t be loaded.</string>
    <string name="notes">Notes</string>
    <string name="permissionDenied">Permission denied.</string>
    <string name="phone">Phone</string>
    <string name="selectFileToUpload">Select a File to Upload.</string>
    <string name="sendMailTo">Send mail to</string>
    <string name="sendMailWith">Send mail with</string>
    <string name="settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="surname">Surname</string>
    <string name="unableParseDate">Unable to parse date.</string>
    <string name="zip">ZIP</string>
</resources>
