<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.w.m.crmmobile.controllers.activities.EditNoteActivity"
    android:background="@drawable/rgb_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/category"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:gravity="bottom"
                android:textAlignment="gravity"
                android:background="@color/colorAccent"
                android:textColor="@color/colorPrimary"/>

            <EditText
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="28pt"
                android:hint="@string/category"/>

            <TextView
                android:text="@string/memo"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:gravity="bottom"
                android:textAlignment="gravity"
                android:background="@color/colorAccent"
                android:textColor="@color/colorPrimary"/>

            <EditText
                android:id="@+id/memo"
                android:layout_width="match_parent"
                android:layout_height="85pt"
                android:gravity="top"
                android:hint="@string/memo"/>

            <TextView
                android:text="@string/attachment"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:gravity="bottom"
                android:textAlignment="gravity"
                android:background="@color/colorAccent"
                android:textColor="@color/colorPrimary"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/attachment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/attachment"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="right">

                    <ImageButton
                        android:id="@+id/deleteAttachment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/crmImageButton"
                        android:src="@drawable/delete_icon"
                        android:onClick="removeAttachment"/>

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/crmImageButton"
                        android:src="@drawable/open_folder_icon"
                        android:onClick="setPathAttachment"/>

                </LinearLayout>

            </FrameLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rowCount="4"
                android:columnCount="2">

                <TextView
                    android:text="@string/id"/>

                <TextView
                    android:id="@+id/id"
                    android:hint="@string/id"
                    android:paddingLeft="5sp"/>

                <TextView
                    android:text="@string/cid"/>

                <TextView
                    android:id="@+id/cid"
                    android:hint="@string/cid"
                    android:paddingLeft="5sp"/>

                <TextView
                    android:text="@string/createdBy"/>

                <TextView
                    android:id="@+id/createdBy"
                    android:hint="@string/createdBy"
                    android:paddingLeft="5sp"/>

                <TextView
                    android:text="@string/entryDate"/>

                <TextView
                    android:id="@+id/entryDate"
                    android:hint="@string/entryDate"
                    android:paddingLeft="5sp"/>

            </GridLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="@string/cancel"
                        android:onClick="cancel"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/submit"
                        android:onClick="submit"/>

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
