<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:clipChildren="false"
    android:background="@drawable/rgb_background">

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.15"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout1"
        android:orientation="vertical"
        android:layout_width="0dip"
        android:layout_weight="0.7">

        <Button
            android:id="@+id/btnList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/list"
            android:onClick="navList" />

        <Button
            android:id="@+id/btnNewCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/newCustomer"
            android:onClick="navNewCustomer" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/settings"
            android:onClick="navSettings"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.15"/>

</LinearLayout>
