<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.w.m.crmmobile.controllers.activities.DetailsActivity"
    android:orientation="vertical"
    android:background="@drawable/rgb_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/masterData"
            android:textOn="@string/masterData"
            android:onClick="setVisibility"
            android:id="@+id/tglMasterData"
            android:checked="true"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/contactPersons"
            android:textOn="@string/contactPersons"
            android:onClick="setVisibility"
            android:id="@+id/tglContactPersons"
            android:checked="false"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/notes"
            android:textOn="@string/notes"
            android:onClick="setVisibility"
            android:id="@+id/tglNotes"
            android:checked="false"/>

    </LinearLayout>

    <fragment
        android:name="com.w.m.crmmobile.controllers.fragments.MasterDataFragment"
        android:id="@+id/masterDataFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <fragment
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:name="com.w.m.crmmobile.controllers.fragments.ContactPersonsFragment"
        android:id="@+id/contactPersonsFragment"/>

    <fragment
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:name="com.w.m.crmmobile.controllers.fragments.NotesFragment"
        android:id="@+id/notesFragment"/>

</LinearLayout>
